# nanoGPT-Enhanced

./: README.md  generate.py  notes.txt  pyproject.toml  requirements.txt  train.py
.ipynb_checkpoints/: LICENSE-checkpoint  README-checkpoint.md  generate-checkpoint.py  notes-checkpoint.txt  train-checkpoint.py
data/: generatedata.py  synthetic_transactions.txt
data/.ipynb_checkpoints/: transactions-checkpoint.txt
models/: nanoGPT_enhanced.pth
src/nanoGPT/: config.py  model.py  training_engine.py
src/nanoGPT.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/nanoGPT/.ipynb_checkpoints/: __init__-checkpoint.py  model-checkpoint.py
trail_notebooks/: testGPU.ipynb
