[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoGPT"
version = "0.1.0"
description = "Tiny GPT / Bigram LM for experiments"
authors = [
    {name="Sadhvi Chandragiri"}
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
